# ispeak

./: .gitignore  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  SPEC.md  index.html  package-lock.json  package.json  tailwind.config.js
docs/: ai-eval.csv  phase-3.1-manual-test.md  phase-3.2-live-capture-design.md
docs/superpowers/plans/: 2026-05-01-phase2-ai-post-processing.md  2026-05-03-phase2.1-app-context-aware-prompts.md  2026-05-03-tray-icon-groq-ai-eval.md  2026-05-16-phase-3.1-file-import-mvp.md
docs/superpowers/specs/: 2026-05-01-phase2-ai-post-processing-design.md  2026-05-03-phase2.1-app-context-aware-prompts-design.md  2026-05-03-tray-icon-groq-ai-eval-design.md  2026-05-16-phase-3-meeting-transcription-design.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  audio.rs  commands.rs  error.rs  frontmost_app.rs  groq.rs  lib.rs  main.rs  paste.rs  settings.rs  whisper_engine.rs
src-tauri/src/meeting/: chunker.rs  commands.rs  diarise.rs  export.rs  history.rs  ingest.rs  jobs.rs  live.rs  live_macos.rs  mod.rs  pipeline.rs  stitch.rs  types.rs
src-tauri/tests/: file_import_e2e.rs  fixtures_gen.rs
src-tauri/tests/fixtures/: README.md  short.m4a
src/components/: ModelDownload.tsx  SettingsPanel.tsx
src/components/Transcribe/: DropZone.tsx  JobList.tsx  LiveCapture.tsx  MeetingHistory.tsx  SpeakerNamesPanel.tsx  Transcribe.tsx  TranscriptViewer.tsx  index.ts
src/lib/: contract.ts
src/store/: useAppStore.ts  useMeetingStore.ts
